--- a/src/main/resources/eu/telecomnancy/visualcards/DeckView.fxml
+++ b/src/main/resources/eu/telecomnancy/visualcards/DeckView.fxml
@@ -9,10 +9,10 @@
             fx:controller="eu.telecomnancy.visualcards.DeckView">
     <VBox prefHeight="200.0" prefWidth="600.0">
         <MenuBar>
-            <Menu text="File">
-                <MenuItem text="New"/>
-                <SeparatorMenuItem/>
-                <MenuItem text="Exit"/>
+            <Menu text="Game">
+                <MenuItem onAction="#classicGame" text="Classic"/>
+                <MenuItem onAction="#scopaGame" text="Scopa"/>
+                <MenuItem onAction="#beloteGame" text="Belote"/>
             </Menu>
             <Menu text="CardDeck">
                 <MenuItem onAction="#shuffle" text="Shuffle"/>
@@ -25,8 +25,6 @@
             <Menu text="Draw">
                 <MenuItem text="Draw a Random Card" onAction="#randomCard"/>
                 <MenuItem text="Draw next Card" onAction="#nextCard"/>
-                <SeparatorMenuItem/>
-                <MenuItem text="About"/>
             </Menu>
         </MenuBar>
         <ToolBar prefHeight="40.0" prefWidth="200.0">
